--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -19,6 +19,8 @@
   {{ 'custom.css' | asset_url | stylesheet_tag }}
   {{ 'flickity.css' | asset_url | stylesheet_tag }}
   {{ 'feather.css' | asset_url | stylesheet_tag }}
+  {{ 'shopify_common.js' | asset_url | script_tag }}
+  
   
 
 </head>
@@ -44,6 +46,8 @@
   <!-- Cart.js -->
   {{ 'rivets-cart.min.js' | asset_url | script_tag }}
   {{ 'option_selection.js' | shopify_asset_url | script_tag }}
+
+
   
   <!-- Initialise Cart.js once the page has loaded -->
   <script type="text/javascript">
